--- a/styles/style.css
+++ b/styles/style.css
@@ -82,22 +82,26 @@ a {
   padding-left: 25px;
   border: 0px !important;
 }
+
 .counter button {
   padding: 1px 10px;
   margin: 0;
   font-size: 0.8em;
   cursor: pointer;
 }
-.todo-list {
-}
+
+.todo-list {}
+
 .todo-item {
   display: flex;
   padding: 10px;
   border-bottom: 1px solid #e0e0e0;
 }
+
 .todo-item-title {
   flex: 10;
 }
+
 .todo-item-done {
   flex: 1;
 }
@@ -187,4 +191,85 @@ code {
     width: 100%;
     flex-direction: column;
   }
+}
+
+
+.numeros {
+  color: black;
+
+}
+
+
+#fond {
+  background: black;
+}
+
+#scroll {
+  justify-content: center;
+  width: 100%;
+  height: 95%;
+  border-radius: 30px;
+  padding: 10px;
+  text-align: justify;
+  overflow-y: auto;
+  margin: 30% 60%;
+}
+
+#edificios {
+  display: flex;
+  width: 300px;
+  cursor: pointer;
+  text-align: left;
+  color: white;
+}
+
+
+#hola {
+  margin-right: 20px;
+  margin-top: 30px;
+  height: 150px;
+  border-radius: 10px;
+  transition: height 0.5s;
+
+}
+
+#hola:hover {
+  height: 180px;
+  border: 5px groove #facc22;
+}
+
+#img2 {
+  margin-top: 30px;
+  height: 150px;
+  border-radius: 10px;
+  transition: height 0.5s;
+}
+
+#img2:hover {
+  height: 180px;
+  border: 5px groove #facc22;
+}
+
+
+#scroll::-webkit-scrollbar {
+  width: 13px;
+
+}
+
+#scroll::-webkit-scrollbar-thumb {
+  background: linear-gradient(#facc22, #f83600);
+  border-radius: 10px;
+}
+
+#scroll::-webkit-scrollbar-thumb:hover {
+  box-shadow: 0px 0px 3px 2px red inset;
+}
+
+#scroll::-webkit-scrollbar-thumb:active {
+  box-shadow: 0px 0px 3px 2px white inset;
+}
+
+#scroll::-webkit-scrollbar-track {
+  background: rgb(225, 225, 225);
+  border-radius: 20px;
 }
