--- a/styles/style.css
+++ b/styles/style.css
@@ -204,6 +204,26 @@ code {
   background: black;
 }
 
+.volver {
+  display: block;
+  width: 125px;
+  background-color: #161818;
+  font-weight: 700;
+  color: white;
+  text-decoration: none;
+  padding: 2px 35px;
+  border-radius: 10px;
+  margin: 4px 20px;
+}
+
+.volver:hover {
+  background-color: transparent;
+  border: 3px solid #161818;
+  color: #161818;
+}
+
+
+
 #scroll {
   justify-content: center;
   width: 100%;
