--- a/styles/style.css
+++ b/styles/style.css
@@ -314,3 +314,132 @@ code {
   background: rgb(225, 225, 225);
   border-radius: 20px;
 }
+
+
+.contenedor-fondo-animado {
+  display: block;
+  height: 100vh;
+  background: linear-gradient(#161818, #161818);
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+}
+
+
+/* animacion */
+
+
+span.cuatro,
+span.dos,
+span.tres,
+span.uno {
+  border: 0;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  animation: vuela 7s linear infinite normal both;
+}
+
+span.uno {
+  width: 100px;
+  height: 100px;
+  background-color: #facb221e;
+  bottom: -100px;
+}
+
+span.dos {
+  width: 70px;
+  height: 70px;
+  background-color: #434b582b;
+  bottom: -70px;
+}
+
+span.tres {
+  width: 50px;
+  height: 50px;
+  background-color: #f8360046;
+  bottom: -50px;
+}
+
+span.cuatro {
+  width: 20px;
+  height: 20px;
+  background-color: #b3dbd24e;
+  bottom: -20px;
+}
+
+@keyframes vuela {
+  from {
+    transform: rotate(0deg);
+    bottom: 0;
+    opacity: 0;
+  }
+
+  5% {
+    opacity: 1;
+  }
+
+  60% {
+    opacity: 1;
+  }
+
+  to {
+    transform: rotate(360deg);
+    bottom: calc(100% + 100px);
+    opacity: 0;
+  }
+}
+
+/* secuencia y orden */
+.animacion span:nth-child(1) {
+  left: 20%;
+  animation-delay: 3s;
+}
+
+.animacion span:nth-child(2) {
+  left: 50%;
+}
+
+.animacion span:nth-child(3) {
+  left: 35%;
+  animation-delay: 5s;
+}
+
+.animacion span:nth-child(4) {
+  left: 75%;
+  animation-delay: 1s;
+}
+
+.animacion span:nth-child(6) {
+  left: 85%;
+  animation-delay: 3s;
+}
+
+.animacion span:nth-child(7) {
+  left: 90%;
+  animation-delay: 5s;
+}
+
+.animacion span:nth-child(8) {
+  left: 65%;
+}
+
+.animacion span:nth-child(9) {
+  left: 60%;
+}
+
+.animacion span:nth-child(10) {
+  left: 75%;
+  animation-delay: 6s;
+}
+
+.animacion span:nth-child(11) {
+  left: 10%;
+}
+
+.animacion span:nth-child(12) {
+  left: 45%;
+  animation-delay: 3s;
+}
